--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "knex-migrate": "^1.7.4",
     "knex-stringcase": "^1.4.5",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "validate": "^5.1.0"
   },
