modified my routes to accept query params

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -2,22 +2,22 @@
     "development": {
         "NODE_ENV": "development",
         "PORT": 8080,
-        "DATABASE": "database-username",
+        "DATABASE": "brighterEvents",
         "DATABASE_DIALECT": "postgres",
         "HOST": "localhost",
-        "DATABASE_USER": "database-username",
-        "DATABASE_PASSWORD": "database-password.",
+        "DATABASE_USER": "crigla",
+        "DATABASE_PASSWORD": "crigla3646.",
         "SECRET_KEY": "sammy-kirigha-dorcis",
         "JWT_EXPIRATION": "5d"
     },
     "test": { 
         "NODE_ENV": "test",
         "PORT": 8080,
-        "DATABASE": "test-database-name",
+        "DATABASE": "events-test",
         "DATABASE_DIALECT": "postgres",
         "HOST": "localhost",
-        "DATABASE_USER": "database-username",
-        "DATABASE_PASSWORD": "database-password",
+        "DATABASE_USER": "crigla",
+        "DATABASE_PASSWORD": "crigla3646.",
         "SECRET_KEY": "sammy-kirigha-dorcis",
         "JWT_EXPIRATION": "5d" 
     }
